syntax = "proto3";
package elys.membershiptier;

option go_package = "github.com/elys-network/elys/x/membershiptier/types";
import "gogoproto/gogo.proto"; 
import "cosmos/base/v1beta1/coin.proto"; 

message Portfolio {
  string assetkey = 1;  // assetkey = timestamp_ + asset_type_ + user_address_  + denom/perp/pool -> (amount)
  string denom = 2;
  uint64 amount = 3;
  string creator = 4;
  string minimum_today = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}
