syntax = "proto3";

package elys.membershiptier;

import "elys/membershiptier/portfolio.proto";

option go_package = "github.com/elys-network/elys/x/membershiptier/types";

// Msg defines the Msg service.
service Msg {
  rpc SetPortfolio    (MsgSetPortfolio   ) returns (MsgSetPortfolioResponse   );
}

message MsgSetPortfolio {
  string creator = 1;
  string user    = 2;
}

message MsgSetPortfolioResponse {}

